fizxed a few font size issues on mobile

--- a/src/components/myStyle.module.css
+++ b/src/components/myStyle.module.css
@@ -117,6 +117,12 @@
   background-color: rgb(55, 71, 79) !important;
 }
 
+@media only screen and (max-width: 600px) {
+  .project {
+    font-size: 12px !important
+  }
+}
+
 .snap {
   height: 500px !important;
   width: auto !important;
@@ -141,5 +147,12 @@
 
 .btmPortPadding{
   margin: 20px !important;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .contactMe {
+ font-size: 14px !important;
+  }
 }
 
